@@ -30,9 +30,11 @@ int test() {
 }
 ], [CFLAGS="-D__EXTENSIONS__ $CFLAGS"])
 
+signer_pid_file=$localstatedir/run/opendnssec/signerd.pid
 fetch_pid_file=$localstatedir/run/opendnssec/zone_fetcher.pid
 signer_cli="$prefix/bin/ods-signer sign"
 
+AC_DEFINE_UNQUOTED(SIGNER_PIDFILE, ["`eval echo $signer_pid_file | sed s,NONE,$ac_default_prefix,g`"], [Path to the OpenDNSSEC signer engine pid file])
 AC_DEFINE_UNQUOTED(FETCH_PIDFILE, ["`eval echo $fetch_pid_file | sed s,NONE,$ac_default_prefix,g`"], [Path to the OpenDNSSEC zone fetcher pid file])
 AC_DEFINE_UNQUOTED(SIGNER_CLI_COMMAND, ["`eval echo $signer_cli | sed s,NONE,$ac_default_prefix,g`"], [Path to the OpenDNSSEC signer engine cli])
 
